SFDC Automation/src/objects/Ryder_Survey_Response__c.object
<CustomObject>
    <description>This custom object provides the responses to the questions answered for any survey that is created in survey software.</description>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <label>Activity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_Survey_ID__c</fullName>
        <description>Clicktools ID that identifies the actual survey and the responses.</description>
        <inlineHelpText>Clicktools ID that identifies the actual survey and the responses.</inlineHelpText>
        <label>CT Survey ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Lessee__c</fullName>
        <description>The lessee number associated to the company.</description>
        <formula>Contact__r.Account.LesseeNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The lessee number associated to the company.</inlineHelpText>
        <label>Company Lessee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Name of the company associated to the contact and customer/branch survey response.</description>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the company associated to the contact and customer/branch survey response.</inlineHelpText>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>The individual survey respondent&apos;s first name.</description>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The individual survey respondent&apos;s first name.</inlineHelpText>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>The individual survey respondent&apos;s last name.</description>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The individual survey respondent&apos;s last name.</inlineHelpText>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <description>The individual survey respondent&apos;s phone number.</description>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The individual survey respondent&apos;s phone number.</inlineHelpText>
        <label>Contact Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The individual survey respondent.</description>
        <inlineHelpText>The individual survey respondent.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ryder Survey Responses</relationshipLabel>
        <relationshipName>Ryder_CS_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer/branch associated to the survey respondent.</description>
        <inlineHelpText>The customer/branch associated to the survey respondent.</inlineHelpText>
        <label>Customer / Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Ryder Survey Responses</relationshipLabel>
        <relationshipName>Ryder_CS_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>The prospect number of the customer associated to the survey respondent.</description>
        <formula>Contact__r.Account.CustProspectID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The prospect number of the customer associated to the survey respondent.</inlineHelpText>
        <label>Customer Prospect Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>Question Number presented in the survey (not necessarily to the agent at the time of conducting survey) as hidden fields would also be included.</description>
        <inlineHelpText>Question Number presented in the survey (not necessarily to the agent at the time of conducting survey) as hidden fields would also be included.</inlineHelpText>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Response__c</fullName>
        <description>Response presented in the survey (not necessarily to the agent at the time of conducting survey) as hidden fields would also be included.</description>
        <label>Question Response</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>The text associated to the question that may or may not be displayed to the agent at the time of conducting the survey.</description>
        <inlineHelpText>The text associated to the question that may or may not be displayed to the agent at the time of conducting the survey.</inlineHelpText>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Key__c</fullName>
        <description>Response key transmitted from clicktools</description>
        <label>Response Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_Branch__c</fullName>
        <label>Ryder Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_Survey_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ryder Survey Question</label>
        <referenceTo>Ryder_Survey_Question__c</referenceTo>
        <relationshipLabel>Ryder Survey Responses</relationshipLabel>
        <relationshipName>Ryder_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyId__c</fullName>
        <label>Ryder Survey</label>
        <referenceTo>Ryder_Surveys__c</referenceTo>
        <relationshipLabel>Ryder Survey Responses</relationshipLabel>
        <relationshipName>Ryder_Survey_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Conducted_By_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the individual that conducted the survey.</description>
        <inlineHelpText>The name of the individual that conducted the survey.</inlineHelpText>
        <label>Survey Conducted By ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ryder_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Conducted_By__c</fullName>
        <description>The alias of the person that conducted the survey.</description>
        <inlineHelpText>The alias of the person that conducted the survey.</inlineHelpText>
        <label>Survey Conducted By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Submission_Date__c</fullName>
        <description>The date the survey responses were submitted.</description>
        <inlineHelpText>The date the survey responses were submitted.</inlineHelpText>
        <label>Survey Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>upload_key__c</fullName>
        <externalId>true</externalId>
        <label>upload key</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Ryder Survey Response</label>
    <nameField>
        <displayFormat>RSR-{0000}</displayFormat>
        <label>Ryder Survey Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ryder Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>